# advent-of-code-2022

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  day1.cpp  day2.cpp  main.cpp  test
.github/workflows/: cmake.yml
Google_tests/lib/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md
Google_tests/lib/docs/reference/: matchers.md
Google_tests/lib/googlemock/test/: gmock_output_test_golden.txt
day1/: day1.cpp  day1.h
day2/: day2.cpp  day2.h
day3/: day3.cpp  day3.h
day4/: day4.cpp  day4.h
day5/: day5.cpp  day5.h
ext/: CMakeLists.txt
src/: CMakeLists.txt  Day1.cpp  DayLineSubject.cpp  File.cpp  FileDayProvider.cpp  NetworkDayProvider.cpp  aoc.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day5.h  day6.cpp  day7.cpp  day8.cpp  day9.cpp  file.cpp  file_puzzle_reader.cpp  main.cpp  util.cpp
src/day1/: CMakeLists.txt  day1.cpp
src/day1/include/day1/: day1.hpp
src/include/: Day.h  Day1.hpp  DayLineSubject.h  DayPayload.h  File.h  FileDayProvider.h  IDayLineObserver.h  IDayLineSubject.h  IDayProvider.h  ISubject.h  NetworkDayProvider.h  aoc.hpp  common.hpp  day.h  day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp  day07.hpp  day08.hpp  day09.hpp  day1.hpp  day10.hpp  day11.hpp  day12.hpp  day13.hpp  day14.hpp  day15.hpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp  file.hpp  file_puzzle_reader.hpp  (+3 more)
test/: CMakeLists.txt  Test.cpp  Test.hpp  day01_test.cpp  day02_test.cpp  day03_test.cpp  day04_test.cpp  day05_test.cpp  day06_test.cpp  day07_test.cpp  day08_test.cpp  day09_test.cpp  day10_test.cpp  day11_test.cpp  day12_test.cpp  day13_test.cpp  day14_test.cpp  day15_test.cpp  day1_test.cpp  day2_test.cpp  day3_test.cpp  day4_test.cpp  day5_test.cpp  day6_test.cpp  day7_test.cpp  day8_test.cpp  day9_test.cpp
test/day1/: CMakeLists.txt  day1.test.cpp  test_day1.cpp
